kubernetes/apps/production/tekton-pipelines/tekton-pipelines/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: tekton
  namespace: tekton-pipelines
spec:
  ingressClassName: traefik
  rules:
    - host: tekton.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tekton.${SECRET_DOMAIN}
      secretName: tekton-tls
